fixed compatibility for angular 9 increased the z-index exported the tiptap instance in the editor added ability to set the editor body height

--- a/projects/ngx-tiptap-editor/src/_core.scss
+++ b/projects/ngx-tiptap-editor/src/_core.scss
@@ -86,5 +86,10 @@
   .text-center {
     text-align: center;
   }
+
+  // Utilize the full height
+  .ProseMirror{
+    height: 100%;
+  }
 }
 
